# tflite-model-protector-cpp

./: CMakeLists.txt  LICENSE  README.md  encrypt_model.cpp
TFLiteModelProtector/: CMakeLists.txt
TFLiteModelProtector/include/: model_protector.hpp
TFLiteModelProtector/src/: model_protector.cpp
